examples/good/exit_code.latf
int main() {
    return 42; // Program finished with exit code 42
}