examples/bad/keywords.latf
int main() {
    auto λ = 1;
    return 0;
}